k8s/engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
  namespace: mone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine
          image: mone/engine:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 256Mi
